--- a/az-900.md
+++ b/az-900.md
@@ -491,6 +491,8 @@ Each section in the Azure Security Center portal shows an individual performance
 - Integrate with Other Cloud Providers
 - Alerts for Resources Security
 - Networking
+#### For "perimeter" layer of security use a wirewall
+#### For "network" layer of network security: Seprate servers into distint subnets by role
 ##### How to use the Security Center?
 To take advantage of Azure Security Center for the security of cloud infrastructure, Azure users need to follow these three-step process:
 - Define Policies
@@ -546,6 +548,11 @@ It has the following features:
 - Custom Alerts
 - Real-time Tracking
 - Free Service
+Service Health tracks four types of health events that may impact your resources:
+- Service issues - Problems in the Azure services that affect you right now.
+- Planned maintenance - Upcoming maintenance that can affect the availability of your services in the future.
+- Health advisories - Changes in Azure services that require your attention. Examples include deprecation of Azure features or upgrade requirements (e.g upgrade to a supported PHP framework).
+- Security advisories - Security related notifications or violations that may affect the availability of your Azure services.
 ### Compliance
 The general principle that cloud services deliver must adhere to the requirements faced by cloud customers is strongly compliant. This is a very important issue with new cloud computing services, and many IT professionals are looking at it very thoroughly. There are different standards and regulations that cloud customers need to comply. Compliance is not
 negotiable.
@@ -655,6 +662,14 @@ Some properties of SLAs are:
 - Multiple SLAs
 - Complex
 - Mandatory
+
+Azure SLA for Virtual Machines
+- 99.99%: 	Two or more VM in two or more Availability Zones in the same Azure region
+- 99.95%: 	Two or more VM deployed in the same Availability Zones or in the same Dedicated Host Group
+- 99.9%: 	Single VM using Premium SSD or Ultra Disk for all Operating System Disks and Data Disks
+- 99.5%:	Single VM using Standard SSD Managed Disks for Operating System Disk and Data Disks
+- 95%:		Single VM using Standard HDD Managed Disks for Operating System Disks and Data Disks
+
 ### Service Life Cycle
 Every product and the service in Azure has its lifecycle known as Service Lifecycle. Azure is an always-changing environment, and new services are always being introduced.
 
@@ -664,6 +679,6 @@ When the services are developed by the Microsoft for the Azure platform, it is n
 
 There are two main stages in Service Life Cycle:
 - Preview
-    - Private Preview
-    - Public Preview
-- General Availability
+    - Private Preview:  service is in private beta and can be tried after requesting access from Azure
+    - Public Preview:  service is in public beta and can be tried out by anyone with an Azure subscription
+- General Availability: service is in production and can be used by anyone with an Azure subscription.
