--- a/az-900.md
+++ b/az-900.md
@@ -492,7 +492,7 @@ Each section in the Azure Security Center portal shows an individual performance
 - Alerts for Resources Security
 - Networking
 #### For "perimeter" layer of security use a wirewall
-#### For "network" layer of network security: Seprate servers into distint subnets by role
+#### For "network" layer of network security user seprate servers into distint subnets by role
 ##### How to use the Security Center?
 To take advantage of Azure Security Center for the security of cloud infrastructure, Azure users need to follow these three-step process:
 - Define Policies
