--- a/az-900.md
+++ b/az-900.md
@@ -491,8 +491,14 @@ Each section in the Azure Security Center portal shows an individual performance
 - Integrate with Other Cloud Providers
 - Alerts for Resources Security
 - Networking
-#### For "perimeter" layer of security use a wirewall
-#### For "network" layer of network security user seprate servers into distint subnets by role
+#### Security layers
+- Data - i.e. virtual network endpoint
+- Application - i.e. API Management
+- Compute - i.e. Limit Remote Desktop access, Windows Update
+- Network - i.e. NSG, use of subnets, deny by default
+- Perimeter - i.e. DDoS, firewalls
+- Identity & access - i.e. Azure AD
+- Physical - i.e. Door locks and key cards
 ##### How to use the Security Center?
 To take advantage of Azure Security Center for the security of cloud infrastructure, Azure users need to follow these three-step process:
 - Define Policies
@@ -541,6 +547,8 @@ The outcome of using Azure Monitor:
 - Maximize Performance
 - Maximize Availability
 - Identify Issue
+### Azure Shared responsibility model
+![SRM](/images/cloudguru/srp.png)
 ### Azure Service Health
 Whenever there is a plan of maintenance or service incident, you get notified about it with the use of Azure Service Health. With Azure Service Health, you get notified about the planned or unplanned maintenance of the platform.
 It has the following features:
