--- a/az-900.md
+++ b/az-900.md
@@ -33,6 +33,8 @@ In order to understand Cloud Computing, you need to understand some technical te
 - Serverless
 - SaaS (Software as a Service)
 
+![Services](/images/cloudguru/as.png)
+
 #### Cloud Computing Deployments Models
 There are three different types of Cloud Computing: Public, Private and Hybrid.
 - Public cloud is owned and operated by third parties that are providing computing services like storage, software etc.
