--- a/az-900.md
+++ b/az-900.md
@@ -408,6 +408,11 @@ IoT Hub is a cloud-hosted, managed service that serves as a central hub, which c
 #### IoT Central
 Azure IoT Central is a fully managed, highly scalable IoT SaaS solution that reduces the complexity and costs of developing, managing and maintaining IoT solutions of an enterprise-grade nature. Its user-friendly interface allows easy monitoring of device requirements, developing guidelines, and managing millions of devices and their data over
 their life cycle.
+#### Azure Sphere
+- Comprehensive IoT security solution—including hardware, OS and cloud components—to actively protect your devices, your business and your customers
+	-	Sphere: chips with built-in Microsoft security technology
+	-	Sphere OS: Linux based operating system on chips to add layers of protection 
+	-	Sphere Security Service: detects threats and renews device security
 ### Big Data
 Big Data is a term used to describe the collection of millions of data that is large in size and keeps growing exponentially over time. Big data in terms of business value is used for better service, better products and more profits. In Azure, there are many services and tools that deals with Big Data, some of them are defined below:
 - **Azure Data Lake Analytics**:Azure Data Lake Analytics is an on-demand job analytics service that simplifies big data. In Data Lake analytics, there is parallel processing which means that same data is processed by two or more processors at the same time.
@@ -429,6 +434,11 @@ Microsoft focuses on three main parts to how machine learning can be used on the
 - Models
 - Knowledge Mining
 - Built-in Apps
+
+#### Azure bot service
+- A nature language chat bot service
+- Provices a data base of frequently asked questions
+
 #### Azure Cognitive Services
 Cognitive services bring AI within every developer's reach — without requiring expertise in machine learning. All it takes is an API call to embed the feature to see, hear, speak, search, understand, and accelerate decision making into your apps.
 #### Azure Machine Learning Studio
@@ -691,4 +701,16 @@ There are two main stages in Service Life Cycle:
 - Preview
     - Private Preview:  service is in private beta and can be tried after requesting access from Azure
     - Public Preview:  service is in public beta and can be tried out by anyone with an Azure subscription
-- General Availability: service is in production and can be used by anyone with an Azure subscription.
+- General Availability: service is in production and can be used by anyone with an Azure subscription
+
+### GitHub
+- Development and code management platform
+- Github actions help in creating workflows aroung the Github actions like code check-in etc.	
+
+### Azure mobile application
+- Mobile application to check the health of your Azure resources
+
+### Azure Resource Manager (ARM)
+- Deployment and management service for Azure. 
+- Provides a management layer that enables you to create, update, and delete resources in your Azure account
+- Provides ARM templates in JSON format to be used to create an entire Azure based solution with minimum required features like VNet, DBMS, VM etc.
