--- a/az-900.md
+++ b/az-900.md
@@ -664,6 +664,8 @@ Microsoft offers numerous support plans for Azure customers in order to find rig
 - Forums
 - Azure Advisor
 - Service Health
+![Support plans](/images/cloudguru/asp.png)
+
 ### Tickets
 To contact a support there is medium called “Tickets”. Tickets are what the enquiry issue makes support. A ticket is usually a number that uniquely identify your enquiry.
 ### Channels
