--- a/az-900.md
+++ b/az-900.md
@@ -300,9 +300,9 @@ In Azure, three types of Blobs are supported:
 - It sizes up to 8TB
 
 During the time of creation, you need to select the type of a storage account, which is based on different pricing options. These are:
-- Hot Tier
-- Cold Tier
-- Archive Tier
+- Hot Tier: Access Frequency – High
+- Cold Tier: Access Frequency – Low
+- Archive Tier: Access Frequency – Lowest
 ### Disk Storage
 It is a disk to which you can store your data. A managed disk is the disk that is attached to your VM. Here, managed means that Azure will look after this disk for you and managed the uptime and backup. There are four different types of disk:
 - HDD
