Azure-first-cut++

--- a/az-900.md
+++ b/az-900.md
@@ -716,3 +716,5 @@ There are two main stages in Service Life Cycle:
 - Deployment and management service for Azure. 
 - Provides a management layer that enables you to create, update, and delete resources in your Azure account
 - Provides ARM templates in JSON format to be used to create an entire Azure based solution with minimum required features like VNet, DBMS, VM etc.
+
+Mallugirlsnaunties
